@@ -1,3 +1,5 @@
+If we're on a different subnet from the one we get DHCP for, don't
+use our current address in messages. Thanks to Wilson Callan.
 Skip over bogus EINTR error on select when arp checking for a
 different address from what we already have. This should not
 happen, so a better fix is probably needed.
